# spacesay

./: .gitignore  LICENSE.md  README.md  location.py  main.py  pyproject.toml  speech.py
spacesay/: location.py  main.py
